<resources>
    <string name="app_name">MyFirebase</string>
    <string name="Password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signIn">Sgin In</string>
    <string name="SignInGoogle">Sign In Google</string>

    <string name="noteTitle">Note Title</string>
    <string name="nodeBody">Node Body</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="saveInternal">Save Internal</string>
    <string name="loadInternal">Load Internal</string>
    <string name="saveSql">save Sql</string>
    <string name="loadSqlBTN">Load Sql</string>
    <string name="ViewRealTimeDB">View Real Time DB</string>
    <string name="userName">User Name</string>
    <string name="Regist">Regist</string>
    <string name="Login">Login</string>
    <string name="AddOtherNote">Add Other Note</string>

</resources>
